--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,49 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --highlight: #ff57b2;
+  --heading: #F8F8F8;
+  --background: #1A1D23;
+  --info: #BBBBBB;
+  --body: #D7D7D7;
+}
+
+body {
+  background: var(--background);
+  color: var(--body)
+}
+
+@media (max-width:1080) {
+  html {
+    font-size: 93.75%
+  }  
+}
+
+@media (max-width: 720){
+  html {
+    font-size: 87.5%
+  }
+}
+
+body, input, select, textarea, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
